--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/container">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -15,8 +16,8 @@
             android:layout_margin="16dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
-            android:layout_height="match_parent">
-            <include layout='@layout/card_layout'/>
+            android:layout_height="match_parent"
+            >
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
