--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -11,14 +11,16 @@
         android:orientation="vertical"
         android:id="@+id/container">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="2dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMonster"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             >
-        </androidx.cardview.widget.CardView>
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 </ScrollView>
