--- a/app/src/main/res/layout/all_monsters_layout.xml
+++ b/app/src/main/res/layout/all_monsters_layout.xml
@@ -10,26 +10,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/container">
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
 
-            <SearchView
-                android:id="@+id/search"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:iconifiedByDefault="false">
-
-                <requestFocus />
-            </SearchView>
-
-            <ListView
-                android:id="@+id/listview"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_below="@+id/search" />
-
-        </RelativeLayout>
+        <include layout='@layout/search_bar'/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMonster"
