--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -7,11 +7,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardContainer"
     android:layout_margin="5dp"
-    app:cardBackgroundColor="#673AB7"
-    app:cardCornerRadius="12dp"
+    app:cardBackgroundColor="#edeae0"
     app:cardElevation="3dp"
     app:contentPadding="4dp"
-    app:strokeColor="#000"
+    app:strokeColor="#c9c6bb"
     app:strokeWidth="1dp"
     >
 
@@ -27,10 +26,17 @@
             android:id="@+id/cardView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="50dp"
+            android:src="@drawable/logo_dofus"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="16dp">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/background_monster"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="16dp" />
 
             <ImageView
                 android:id="@+id/cardImage"
@@ -44,13 +50,15 @@
 
         <TextView
             android:id="@+id/cardText"
-            android:layout_width="236dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="36dp"
+            android:layout_width="170dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="16dp"
+            android:background="#c9c6bb"
             android:gravity="center"
-            android:textColor="#fff"
+            android:textColor="#28170e"
             android:textSize="25dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintLeft_toRightOf="@+id/cardImage"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
             app:layout_constraintTop_toTopOf="parent" />
@@ -67,10 +75,10 @@
             app:iconTint="#fff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/cardText"
-            app:layout_constraintHorizontal_bias="0.905"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/cardImage"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintVertical_bias="0.872"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
