wip bottom navigation

--- a/app/src/main/res/layout/all_monsters_layout.xml
+++ b/app/src/main/res/layout/all_monsters_layout.xml
@@ -25,4 +25,5 @@
             >
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
+    <include layout='@layout/bottom_navigation'/>
 </ScrollView>
