--- a/app/src/main/res/layout/filtered_monsters_layout.xml
+++ b/app/src/main/res/layout/filtered_monsters_layout.xml
@@ -11,7 +11,7 @@
             android:orientation="vertical"
             android:id="@+id/container">
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewMonster"
+                android:id="@+id/recyclerViewType"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="5dp"
